--- a/src/main/webapp/views/framework/index.html
+++ b/src/main/webapp/views/framework/index.html
@@ -113,7 +113,7 @@
                             <li><a ui-sref="index.monitorDataAnalysis"><i class="fa  fa-list-alt"></i> 数据分析</a></li>
                         </ul>
                     </li>
-					<li><a href="http://tech.corp.elong.com/twiki/bin/view/HOTEL/%E9%80%9A%E7%94%A8%E6%8C%87%E6%A0%87%E5%BA%93"   target="_blank"><i class="fa fa-book"></i> <span>twiki</span></a></li>
+					<li><a href="javascript:void()"   target="_blank"><i class="fa fa-book"></i> <span>twiki</span></a></li>
                     <!--------------------------------------------------------------------------------->
 
                 </ul>
@@ -130,7 +130,7 @@
             <div class="pull-right hidden-xs">
                 <b>Version</b> 2.3.8
             </div>
-            <strong>Copyright &copy; 2017-2020 <a href="http://http://www.elong.com/">Elong</a>.</strong> All rights
+            <strong>Copyright &copy; 2017-2020 <a href="http://http://www.hui.zhao.com/">Hui.Zhao</a>.</strong> All rights
             reserved.
         </footer>
 
